Introduce Unit Testing
This commit adds:

* A GitHub Action to perform unit testing for Puppet versions 6 and 7
* A unit test for the `mac_web_proxy` type

--- a/.github/workflows/pdk-validate.yml
+++ b/.github/workflows/pdk-validate.yml
@@ -40,3 +40,13 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           pdk validate --puppet-version=7
+
+      - name: PDK Unit Testing - Version 6
+        run: |
+          cd $GITHUB_WORKSPACE
+          pdk test unit --puppet-version=6
+
+      - name: PDK Unit Testing - Version 7
+        run: |
+          cd $GITHUB_WORKSPACE
+          pdk test unit --puppet-version=7
